# AutomataSimulator

./: .clang-format  .gitignore  AutomataSimulator.def  AutomataSimulator.sln  AutomataSimulator.vcxproj  AutomataSimulator.vcxproj.filters  CMakeLists.txt  TODO.md
AutomataSimulator/src/FiniteAutomata/: FiniteAutomaton.cpp  FiniteAutomaton.h  FiniteAutomatonException.h
AutomataSimulator/src/FiniteAutomata/DeterministicFiniteAutomaton/: DeterministicFiniteAutomaton.cpp  DeterministicFiniteAutomaton.h
AutomataSimulator/src/FiniteAutomata/NonDeterministicFiniteAutomaton/: NonDeterministicFiniteAutomaton.cpp  NonDeterministicFiniteAutomaton.h
AutomataSimulator/src/PushdownAutomata/: PushdownAutomata.cpp  PushdownAutomata.h  PushdownAutomataException.h
Tests/: CMakeLists.txt  DeterministicFiniteAutomata.cpp  DeterministicPushdownAutomaton.cpp  DeterministicTuringMachine.cpp  NonDeterministicFiniteAutomata.cpp  NonDeterministicPushdownAutomaton.cpp  NonDeterministicTuringMachine.cpp  Tests.vcxproj  Transition.h  pch.h
Wrappers/: DFAWrapper.cpp  DFAWrapper.h
include/: AutomataSimulator.h
include/AutomataSimulator/: AutomatonException.h  DeterministicFiniteAutomaton.h  DeterministicPushdownAutomaton.h  DeterministicTuringMachine.h  FAState.h  FATransition.h  FiniteAutomaton.h  NonDeterministicFiniteAutomaton.h  NonDeterministicPushdownAutomaton.h  NonDeterministicTuringMachine.h  PDAState.h  PDATransition.h  PushdownAutomaton.h  TMDirection.h  TMState.h  TMTape.h  TMTransition.h  TuringMachine.h  config.h
include/AutomataSimulator/c_api/: AutomatonException_c.h  DeterministicFiniteAutomaton_c.h  DeterministicPushdownAutomaton_c.h  DeterministicTuringMachine_c.h  FAState_c.h  FATransition_c.h  NonDeterministicFiniteAutomaton_c.h  NonDeterministicPushdownAutomaton_c.h  NonDeterministicTuringMachine_c.h  PDAState_c.h  PDATransition_c.h  TMState_c.h  TMTape_c.h  TMTransition_c.h  c_util.h
src/: CMakeLists.txt
src/AutomatonException/: AutomatonException.h
src/FiniteAutomata/: FiniteAutomaton.cpp  FiniteAutomaton.h  FiniteAutomatonException.h
src/FiniteAutomata/DeterministicFiniteAutomaton/: DeterministicFiniteAutomaton.cpp  DeterministicFiniteAutomaton.h
src/FiniteAutomata/FAState/: FAState.cpp  FAState.h
src/FiniteAutomata/FATransition/: FATransition.cpp  FATransition.h
src/FiniteAutomata/NonDeterministicFiniteAutomaton/: NonDeterministicFiniteAutomaton.cpp  NonDeterministicFiniteAutomaton.h
src/FiniteAutomaton/: FiniteAutomaton.cpp  FiniteAutomaton.h  FiniteAutomatonException.h
src/FiniteAutomaton/DeterministicFiniteAutomaton/: DFAWrapper.cpp  DeterministicFiniteAutomaton.cpp  DeterministicFiniteAutomaton.h
src/FiniteAutomaton/FAState/: FAState.cpp  FAState.h
src/FiniteAutomaton/FATransition/: FATransition.cpp  FATransition.h
src/FiniteAutomaton/NonDeterministicFiniteAutomaton/: NonDeterministicFiniteAutomaton.cpp  NonDeterministicFiniteAutomaton.h
src/PushdownAutomata/: PushdownAutomaton.cpp  PushdownAutomaton.h
src/PushdownAutomata/DeterministicPushdownAutomaton/: DeterministicPushdownAutomaton.cpp  DeterministicPushdownAutomaton.h
src/PushdownAutomata/NonDeterministicPushdownAutomaton/: NonDeterministicPushdownAutomaton.cpp  NonDeterministicPushdownAutomaton.h
src/PushdownAutomata/PDAState/: PDAState.cpp  PDAState.h
src/PushdownAutomata/PDATransition/: PDATransition.cpp  PDATransition.h
src/PushdownAutomaton/: PushdownAutomaton.cpp  PushdownAutomaton.h  PushdownAutomatonException.h
src/PushdownAutomaton/DeterministicPushdownAutomaton/: DeterministicPushdownAutomaton.cpp  DeterministicPushdownAutomaton.h
src/PushdownAutomaton/NonDeterministicPushdownAutomaton/: NonDeterministicPushdownAutomaton.cpp  NonDeterministicPushdownAutomaton.h
src/PushdownAutomaton/PDAState/: PDAState.cpp  PDAState.h
src/PushdownAutomaton/PDATransition/: PDATransition.cpp  PDATransition.h
src/TuringMachine/: Direction.h  TMDirection.h  TuringMachine.cpp  TuringMachine.h
src/TuringMachine/DeterministicTuringMachine/: DeterministicTuringMachine.cpp  DeterministicTuringMachine.h
src/TuringMachine/NonDeterministicTuringMachine/: NonDeterministicTuringMachine.cpp  NonDeterministicTuringMachine.h
src/TuringMachine/TMState/: TMState.cpp  TMState.h
src/TuringMachine/TMTape/: TMTape.cpp  TMTape.h
src/TuringMachine/TMTransition/: TMTransition.cpp  TMTransition.h
src/TuringMachine/Tape/: Tape.h
src/c_api/: DeterministicFiniteAutomaton_c.cpp  DeterministicPushdownAutomaton_c.cpp  DeterministicTuringMachine_c.cpp  FAState_c.cpp  FATransition_c.cpp  NonDeterministicFiniteAutomaton_c.cpp  NonDeterministicPushdownAutomaton_c.cpp  NonDeterministicTuringMachine_c.cpp  PDAState_c.cpp  PDATransition_c.cpp  TMState_c.cpp  TMTape_c.cpp  TMtransition_c.cpp  c_util.cpp
(+11 files in other folders)
